Fix #861 Update Lingva Translate domains and make async